--- a/package.json
+++ b/package.json
@@ -9,12 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@hookform/resolvers": "^3.3.4",
     "@reduxjs/toolkit": "^2.0.1",
     "axios": "^1.6.2",
     "chart.js": "^4.4.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dayjs": "^1.11.10",
     "i18next": "^23.8.2",
+    "lucide-react": "^0.330.0",
     "next": "14.1.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
@@ -25,6 +29,8 @@
     "react-redux": "^8.1.3",
     "react-toastify": "^9.1.3",
     "recharts": "^2.10.3",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.2.0"
   },
   "devDependencies": {
