[feat]-create-new-team

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,6 +21,7 @@
       "@element/*": ["./src/app/components/elements/*"],
       "@widget/*": ["./src/app/components/widgets/*"],
       "@layout/*": ["./src/app/components/layout/*"],
+      "@components/*": ["./src/app/components/*"],
       "@/*": ["./src/*"]
     }
   },
